fix: image alignment

--- a/web/css/merchandise.css
+++ b/web/css/merchandise.css
@@ -152,7 +152,8 @@
     }
 
     .clothes {
-        display: block;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     .clothes img {
